--- a/agriapps/eachpage.html
+++ b/agriapps/eachpage.html
@@ -200,7 +200,7 @@
     <script src = "./js/amcharts/serial.js"></script>
     <script src = "./js/amcharts/plugins/export/export.min.js"></script>
     <script src = "./js/amcharts/themes/light.js"></script>
-    <script src = "./js/chartcode.js"></script>
+    <script src = "./js/chartcode_3lines.js"></script>
 
   </body>
 </html>
