--- a/agriapps/listview.html
+++ b/agriapps/listview.html
@@ -36,8 +36,8 @@
             <table class = "table table-list">
               <tbody>
                 <tr>
-                  <th class = "light-green-literal-white">エリア1</th>
-                  <td class = "white-literal-strong-green">23.6℃</td>
+                  <th class = "light-green-literal-white align-vertical-center">エリア1</th>
+                  <td class = "white-literal-strong-green">23.6°</td>
                   <td class = "light-green-literal-white"><a href = "./eachpage.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
                 </tr>
               </tbody>
@@ -45,8 +45,8 @@
             <table class = "table table-list">
               <tbody>
                 <tr>
-                  <th class = "light-green-literal-white">エリア2</th>
-                  <td class = "white-literal-strong-green">23.6℃</td>
+                  <th class = "light-green-literal-white align-vertical-center">エリア2</th>
+                  <td class = "white-literal-strong-green">23.6°</td>
                   <td class = "light-green-literal-white"><a href = "./eachpage.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
                 </tr>
               </tbody>
@@ -54,8 +54,8 @@
             <table class = "table table-list">
               <tbody>
                 <tr>
-                  <th class = "light-green-literal-white">エリア3</th>
-                  <td class = "white-literal-strong-green">23.6℃</td>
+                  <th class = "light-green-literal-white align-vertical-center">エリア3</th>
+                  <td class = "white-literal-strong-green">23.6°</td>
                   <td class = "light-green-literal-white"><a href = "./eachpage.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
                 </tr>
               </tbody>
