--- a/agriapps/listview.html
+++ b/agriapps/listview.html
@@ -15,19 +15,19 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body background = "./img/bg.jpg">
     <div class = "container">
       
       <header>
         <div class = "page-header">
-            <h1 class = "light-green-literal-white">林洋ラン園</h1>
+            <h1 class = "light-green-literal-white">ラプラス農園</h1>
         </div><!-- /page-header -->
       </header>
       
       <article>
-        <div class = "center-block" style = "width:400px; text-align:center; margin-bottom: 20px;">
+        <div class = "center-block" style = "text-align:center; margin-bottom: 20px;">
           <h2>快晴</h2>
-          <p>豊田市榊野町</p>
+          <p>京都市伏見区</p>
           <img src = "./img/weather.png" class = "img-responsive" alt = "サンプル画像">
         </div>
 
@@ -38,7 +38,7 @@
                 <tr>
                   <th class = "light-green-literal-white align-vertical-center">エリア1</th>
                   <td class = "white-literal-strong-green">23.6°</td>
-                  <td class = "light-green-literal-white"><a href = "./eachpage.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
+                  <td class = "light-green-literal-white"><a href = "./eachview.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
                 </tr>
               </tbody>
             </table>
@@ -47,7 +47,7 @@
                 <tr>
                   <th class = "light-green-literal-white align-vertical-center">エリア2</th>
                   <td class = "white-literal-strong-green">23.6°</td>
-                  <td class = "light-green-literal-white"><a href = "./eachpage.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
+                  <td class = "light-green-literal-white"><a href = "./eachview.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
                 </tr>
               </tbody>
             </table>
@@ -56,7 +56,7 @@
                 <tr>
                   <th class = "light-green-literal-white align-vertical-center">エリア3</th>
                   <td class = "white-literal-strong-green">23.6°</td>
-                  <td class = "light-green-literal-white"><a href = "./eachpage.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
+                  <td class = "light-green-literal-white"><a href = "./eachview.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
                 </tr>
               </tbody>
             </table>
@@ -65,7 +65,7 @@
 
         <div class = "history">
           <table class = "table table-bordered">
-            <caption style = "text-align: center;">異常履歴</caption>
+            <caption class = "twinleaf" style = "text-align: center;">異常履歴</caption> 
             <thead>
             </thead>
             <tbody>
@@ -74,11 +74,11 @@
                 <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">林洋ラン園ビニールハウス1</td>
               </tr>
               <tr>
-                <td>2016/10/21 11:24</td>
-                <td rowspan = 2 class = "align-vertical-center">発生</td>
+                <td class = "white-literal-black">2016/10/21 11:24</td>
+                <td rowspan = 2 class = "align-vertical-center white-literal-black">発生</td>
               </tr>
               <tr>
-                <td>温度上限異常</td>
+                <td class = "white-literal-black">温度上限異常</td>
               </tr>
             </tbody>
             <tbody>
@@ -87,11 +87,11 @@
                 <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">林洋ラン園ビニールハウス5</td>
               </tr>
               <tr>
-                <td>2016/10/21 13:10</td>
-                <td rowspan = 2 class = "align-vertical-center">発生</td>
+                <td class = "white-literal-black">2016/10/21 13:10</td>
+                <td rowspan = 2 class = "align-vertical-center white-literal-black">発生</td>
               </tr>
               <tr>
-                <td>温度上限異常</td>
+                <td class = "white-literal-black">温度上限異常</td>
               </tr>
             </tbody>
             <tbody>
@@ -100,11 +100,11 @@
                 <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">林洋ラン園ビニールハウス5</td>
               </tr>
               <tr>
-                <td>2016/10/21 9:15</td>
-                <td rowspan = 2 class = "align-vertical-center">発生</td>
+                <td class = "white-literal-black">2016/10/21 9:15</td>
+                <td rowspan = 2 class = "align-vertical-center white-literal-black">発生</td>
               </tr>
               <tr>
-                <td>温度上限異常</td>
+                <td class = "white-literal-black">温度上限異常</td>
               </tr>
             </tbody>
           </table>
