--- a/agriapps/eachview.html
+++ b/agriapps/eachview.html
@@ -75,7 +75,7 @@
         <br/>
         <div class = "history">
           <table class = "table table-bordered">
-            <caption class = "twinleaf" style = "text-align: center;">異常履歴</caption> 
+            <img src = "./img/abnormal.png" style = "width: 100%;"/> 
             <thead>
             </thead>
             <tbody>
