--- a/agriapps/eachview3.html
+++ b/agriapps/eachview3.html
@@ -59,7 +59,7 @@
             <tbody>
               <tr class = "top-temprature">
                 <td style = "vertical-align: bottom;"><img src = "./img/green_single.png"/></td>
-                <td><span style = "font-size: 32px;">温度</span><br/><span style = "font-size: 64px;">28.6°</span></td>
+                <td><span style = "font-size: 32px;">温度</span><br/><span style = "font-size: 64px;">27.8°</span></td>
                 <td style = "vertical-align: bottom;"><img src = "./img/green_single.png"/></td>
               </tr>
               <tr>
@@ -85,37 +85,11 @@
                 <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">ハウス2</td>
               </tr>
               <tr>
-                <td class = "white-literal-black">2016/10/21 13:10</td>
+                <td class = "white-literal-black">2016/10/21 7:53</td>
                 <td rowspan = 2 class = "align-vertical-center white-literal-black">発生</td>
               </tr>
               <tr>
-                <td class = "white-literal-black">温度上限異常</td>
-              </tr>
-            </tbody>
-            <tbody>
-              <tr>
-                <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">2</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">ハウス5</td>
-              </tr>
-              <tr>
-                <td class = "white-literal-black">2016/10/21 11:24</td>
-                <td rowspan = 2 class = "align-vertical-center white-literal-black">発生</td>
-              </tr>
-              <tr>
-                <td class = "white-literal-black">温度センサー1通信異常</td>
-              </tr>
-            </tbody>
-            <tbody>
-              <tr>
-                <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">3</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">ハウス2</td>
-              </tr>
-              <tr>
-                <td class = "white-literal-black">2016/10/21 9:15</td>
-                <td rowspan = 2 class = "align-vertical-center white-literal-black">発生</td>
-              </tr>
-              <tr>
-                <td class = "white-literal-black">温度上限異常</td>
+                <td class = "white-literal-black">温度センサー2異常</td>
               </tr>
             </tbody>
           </table>
