--- a/agriapps/listview.html
+++ b/agriapps/listview.html
@@ -31,13 +31,11 @@
           <img src = "./img/weather.png" class = "img-responsive" alt = "サンプル画像">
         </div>
 
-        <div id = "sortarea">
-          <div id = "sortable" class = "ui-sortable">
             <table class = "table table-list">
               <tbody>
                 <tr>
                   <th class = "light-green-literal-white align-vertical-center">エリア1</th>
-                  <td class = "white-literal-strong-green">23.6°</td>
+                  <td class = "white-literal-strong-green">28.6°</td>
                   <td class = "light-green-literal-white"><a href = "./eachview.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
                 </tr>
               </tbody>
@@ -46,8 +44,8 @@
               <tbody>
                 <tr>
                   <th class = "light-green-literal-white align-vertical-center">エリア2</th>
-                  <td class = "white-literal-strong-green">23.6°</td>
-                  <td class = "light-green-literal-white"><a href = "./eachview.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
+                  <td class = "white-literal-strong-green">28.4°</td>
+                  <td class = "light-green-literal-white"><a href = "./eachview2.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
                 </tr>
               </tbody>
             </table>
@@ -55,36 +53,21 @@
               <tbody>
                 <tr>
                   <th class = "light-green-literal-white align-vertical-center">エリア3</th>
-                  <td class = "white-literal-strong-green">23.6°</td>
-                  <td class = "light-green-literal-white"><a href = "./eachview.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
+                  <td class = "white-literal-strong-green">27.8°</td>
+                  <td class = "light-green-literal-white"><a href = "./eachview3.html"><span class="glyphicon glyphicon-chevron-right white-icon"></span></a></td>
                 </tr>
               </tbody>
             </table>
-          </div><!-- /sortable -->
-        </div><!-- /sortarea -->
 
         <div class = "history">
           <table class = "table table-bordered">
-            <caption class = "twinleaf" style = "text-align: center;">異常履歴</caption> 
+            <img src = "./img/green.png" style = "width: 100%;"/> 
             <thead>
             </thead>
             <tbody>
               <tr>
                 <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">1</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">林洋ラン園ビニールハウス1</td>
-              </tr>
-              <tr>
-                <td class = "white-literal-black">2016/10/21 11:24</td>
-                <td rowspan = 2 class = "align-vertical-center white-literal-black">発生</td>
-              </tr>
-              <tr>
-                <td class = "white-literal-black">温度上限異常</td>
-              </tr>
-            </tbody>
-            <tbody>
-              <tr>
-                <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">2</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">林洋ラン園ビニールハウス5</td>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア1</td>
               </tr>
               <tr>
                 <td class = "white-literal-black">2016/10/21 13:10</td>
@@ -96,8 +79,21 @@
             </tbody>
             <tbody>
               <tr>
+                <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">2</th>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア1</td>
+              </tr>
+              <tr>
+                <td class = "white-literal-black">2016/10/21 11:24</td>
+                <td rowspan = 2 class = "align-vertical-center white-literal-black">発生</td>
+              </tr>
+              <tr>
+                <td class = "white-literal-black">温度センサー1通信異常</td>
+              </tr>
+            </tbody>
+            <tbody>
+              <tr>
                 <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">3</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">林洋ラン園ビニールハウス5</td>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア1</td>
               </tr>
               <tr>
                 <td class = "white-literal-black">2016/10/21 9:15</td>
@@ -105,6 +101,19 @@
               </tr>
               <tr>
                 <td class = "white-literal-black">温度上限異常</td>
+              </tr>
+            </tbody>
+            <tbody>
+              <tr>
+                <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">4</th>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア3</td>
+              </tr>
+              <tr>
+                <td class = "white-literal-black">2016/10/21 7:53</td>
+                <td rowspan = 2 class = "align-vertical-center white-literal-black">発生</td>
+              </tr>
+              <tr>
+                <td class = "white-literal-black">温度センサー2異常</td>
               </tr>
             </tbody>
           </table>
