--- a/agriapps/listview.html
+++ b/agriapps/listview.html
@@ -67,7 +67,7 @@
             <tbody>
               <tr>
                 <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">1</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア1</td>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">ラプラス農園　エリア1</td>
               </tr>
               <tr>
                 <td class = "white-literal-black">2016/10/21 13:10</td>
@@ -80,7 +80,7 @@
             <tbody>
               <tr>
                 <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">2</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア1</td>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">ラプラス農園　エリア1</td>
               </tr>
               <tr>
                 <td class = "white-literal-black">2016/10/21 11:24</td>
@@ -93,7 +93,7 @@
             <tbody>
               <tr>
                 <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">3</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア1</td>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">ラプラス農園　エリア1</td>
               </tr>
               <tr>
                 <td class = "white-literal-black">2016/10/21 9:15</td>
@@ -106,7 +106,7 @@
             <tbody>
               <tr>
                 <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">4</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア3</td>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">ラプラス農園　エリア3</td>
               </tr>
               <tr>
                 <td class = "white-literal-black">2016/10/21 7:53</td>
