リンク切断、誤字修正

--- a/agriapps/eachview.html
+++ b/agriapps/eachview.html
@@ -30,17 +30,17 @@
                   <span class = "icon-bar"></span>
                   <span class = "icon-bar"></span>
                 </button>
-                <a class = "navbar-brand"  href = "./listview.html">エリア1</a>
+                エリア1
               </div><!-- /navbar-header -->
               
               <div class = "collapse navbar-collapse" id = "navbarTarget">
                 <ul class = "nav navbar-nav">
-                  <li><a href = "#">施設1</a></li>
-                  <li><a href = "./listview2.html">施設2</a></li>
-                  <li><a href = "./listview3.html">施設3</a></li>
+                  <li><a href = "./eachview2.html">エリア2</a></li>
+                  <li><a href = "./eachview3.html">エリア3</a></li>
+                  <li><a href = "./listview.html">一覧</a></li>
                   <li><a href = "./login.html">ログアウト</a></li>
                 </ul>
-              </div> <!-- /navbarEexample -->
+              </div> <!-- /navbarTarget -->
             </div><!-- /container-fluid -->
           </nav>
 
@@ -82,7 +82,7 @@
             <tbody>
               <tr>
                 <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">1</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">ハウス2</td>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア1</td>
               </tr>
               <tr>
                 <td class = "white-literal-black">2016/10/21 13:10</td>
@@ -95,7 +95,7 @@
             <tbody>
               <tr>
                 <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">2</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">ハウス5</td>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア1</td>
               </tr>
               <tr>
                 <td class = "white-literal-black">2016/10/21 11:24</td>
@@ -108,7 +108,7 @@
             <tbody>
               <tr>
                 <th rowspan = 3 class = "history-th align-vertical-center white-green-literal-white">3</th>
-                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">ハウス2</td>
+                <td colspan = 2 class = "light-green-literal-white" style = "text-align: center;">エリア1</td>
               </tr>
               <tr>
                 <td class = "white-literal-black">2016/10/21 9:15</td>
@@ -141,7 +141,7 @@
     <script src = "./js/amcharts_yuryo/serial.js"></script>
     <script src = "./js/amcharts/plugins/export/export.min.js"></script>
     <script src = "./js/amcharts_yuryo/light.js"></script>
-    <script src = "./js/chartcode_3lines.js"></script>
+    <script src = "./js/chartcode.js"></script>
 
   </body>
 </html>
