--- a/agriapps/eachview2.html
+++ b/agriapps/eachview2.html
@@ -30,17 +30,18 @@
                   <span class = "icon-bar"></span>
                   <span class = "icon-bar"></span>
                 </button>
-                <a class = "navbar-brand"  href = "./listview.html">エリア1</a>
+                エリア2
               </div><!-- /navbar-header -->
               
               <div class = "collapse navbar-collapse" id = "navbarTarget">
                 <ul class = "nav navbar-nav">
-                  <li><a href = "#">施設1</a></li>
-                  <li><a href = "./listview2.html">施設2</a></li>
-                  <li><a href = "./listview3.html">施設3</a></li>
+                  <li><a href = "./eachview.html">エリア1</a></li>
+                  <li><a href = "./eachview3.html">エリア3</a></li>
+                  <li><a href = "./listview.html">一覧</a></li>
                   <li><a href = "./login.html">ログアウト</a></li>
                 </ul>
-              </div> <!-- /navbarEexample -->
+              </div> <!-- /navbarTarget -->
+
             </div><!-- /container-fluid -->
           </nav>
 
