--- a/agriapps/eachview.html
+++ b/agriapps/eachview.html
@@ -55,25 +55,27 @@
         </div>
 
         <div class = "table-responsive">
-          <table class = "table table-hover" style = "background-color: #ffffff; table-layout: fixed;">
+          <table class = "table" style = "background-color: #ffffff; table-layout: fixed;">
             <tbody>
               <tr class = "top-temprature">
                 <td style = "vertical-align: bottom;"><img src = "./img/green_single.png"/></td>
-                <td><span style = "font-size: 32px;">温度</span><br/><span style = "font-size: 64px;">28.6°</span></td>
+                <td><h3>温度</h3><h1>24.0°</h1></td>
                 <td style = "vertical-align: bottom;"><img src = "./img/green_single.png"/></td>
               </tr>
               <tr>
-                <td class = "max-temprature">最高<br/><span style = "font-size: 50px;">32.2°</span></td>
-                <td class = "min-temprature">最低<br/><span style = "font-size: 50px;">9.1° </span></td>
-                <td class = "average-temprature">平均<br/><span style = "font-size: 50px;"> 22.1°</span></td>
+                <td style = "background-color: #256e1b; color: #ffffff; text-align: center;"><h3>最高</h3><h1 style = "margin-bottom: 20px;">24.4°</h1></td>
+                <td style = "background-color: #45963a; color: #ffffff; text-align: center;"><h3>最低</h3><h1 style = "margin-bottom: 20px;">16.1°</h1></td>
+                <td style = "background-color: #648160; color: #ffffff; text-align: center;"><h3>平均</h3><h1 style = "margin-bottom: 20px;">20.2</h1></td>
               </tr>
             </tbody>
           </table>
         </div>
 
-        <div id="chartdiv" style = "width:100%; height: 400px; background-color: #ffffff"></div>
-        <br/>
-        <br/>
+        <div style = "margin-bottom: 2em; padding-top: 2em;">
+          <div id = "graph_title"><h1>エリア1 気温グラフ</h1></div>
+          <div id="chartdiv" style = "width:100%; height: 400px; background-color: #ffffff;"></div>
+        </div>
+
         <div class = "history">
           <table class = "table table-bordered">
             <img src = "./img/green.png" style = "width: 100%;"/> 
@@ -141,7 +143,7 @@
     <script src = "./js/amcharts_yuryo/serial.js"></script>
     <script src = "./js/amcharts/plugins/export/export.min.js"></script>
     <script src = "./js/amcharts_yuryo/light.js"></script>
-    <script src = "./js/chartcode.js"></script>
+    <script src = "./js/chartcode_3lines.js"></script>
 
   </body>
 </html>
