--- a/agriapps/eachview2.html
+++ b/agriapps/eachview2.html
@@ -4,7 +4,7 @@
     <meta charset = "utf-8" >
     <meta http-equiv = "X-UA-Compatible"  content = "IE=edge">
     <meta name       = "viewport"         content = "width=device-width, initial-scale=1">
-    <title>エリア1</title>
+    <title>エリア2</title>
     <link rel = "stylesheet" type = "text/css" href = "./css/bootstrap.min.css"                 media = "screen" />
     <link rel = "stylesheet" type = "text/css" href = "./js/amcharts/plugins/export/export.css" media = "screen" />
     <link rel = "stylesheet" type = "text/css" href = "./css/navbar_ipad.css" media = "screen" />
@@ -56,25 +56,26 @@
         </div>
 
         <div class = "table-responsive">
-          <table class = "table table-hover" style = "background-color: #ffffff; table-layout: fixed;">
+          <table class = "table" style = "background-color: #ffffff; table-layout: fixed;">
             <tbody>
               <tr class = "top-temprature">
                 <td style = "vertical-align: bottom;"><img src = "./img/green_single.png"/></td>
-                <td><span style = "font-size: 32px;">温度</span><br/><span style = "font-size: 64px;">28.4°</span></td>
+                <td><span style = "font-size: 32px;">温度</span><br/><span style = "font-size: 64px;">23.5°</span></td>
                 <td style = "vertical-align: bottom;"><img src = "./img/green_single.png"/></td>
               </tr>
               <tr>
-                <td class = "max-temprature">最高<br/><span style = "font-size: 50px;">32.2°</span></td>
-                <td class = "min-temprature">最低<br/><span style = "font-size: 50px;">9.1° </span></td>
-                <td class = "average-temprature">平均<br/><span style = "font-size: 50px;"> 22.1°</span></td>
+                <td class = "max-temprature">最高<br/><span style = "font-size: 50px;">24.4°</span></td>
+                <td class = "min-temprature">最低<br/><span style = "font-size: 50px;">16.1° </span></td>
+                <td class = "average-temprature">平均<br/><span style = "font-size: 50px;"> 20.3°</span></td>
               </tr>
             </tbody>
           </table>
         </div>
 
-        <div id="chartdiv" style = "width:100%; height: 400px; background-color: #ffffff"></div>
-        <br/>
-        <br/>
+        <div style = "margin-bottom: 2em; padding-top: 2em;">
+          <div id = "graph_title"><h1>エリア2 気温グラフ</h1></div>
+          <div id="chartdiv" style = "width:100%; height: 400px; background-color: #ffffff;"></div>
+        </div>
 
       </article>
       
