--- a/agriapps/eachview.html
+++ b/agriapps/eachview.html
@@ -59,13 +59,13 @@
             <tbody>
               <tr class = "top-temprature">
                 <td style = "vertical-align: bottom;"><img src = "./img/green_single.png"/></td>
-                <td><h3>温度</h3><h1>24.0°</h1></td>
+                <td><h3>温度(℃)</h3><h1 id = "now-temp"></h1></td>
                 <td style = "vertical-align: bottom;"><img src = "./img/green_single.png"/></td>
               </tr>
               <tr>
-                <td style = "background-color: #256e1b; color: #ffffff; text-align: center;"><h3>最高</h3><h1 style = "margin-bottom: 20px;">24.4°</h1></td>
-                <td style = "background-color: #45963a; color: #ffffff; text-align: center;"><h3>最低</h3><h1 style = "margin-bottom: 20px;">16.1°</h1></td>
-                <td style = "background-color: #648160; color: #ffffff; text-align: center;"><h3>平均</h3><h1 style = "margin-bottom: 20px;">20.2</h1></td>
+                <td class = "max-temprature"><h3>最高(℃)</h3><h1 style = "margin-bottom: 20px;">24.4</h1></td>
+                <td class = "min-temprature"><h3>最低(℃)</h3><h1 style = "margin-bottom: 20px;">16.1</h1></td>
+                <td class = "average-temprature"><h3>平均(℃)</h3><h1 style = "margin-bottom: 20px;">20.2</h1></td>
               </tr>
             </tbody>
           </table>
