--- a/agriapps/eachview2.html
+++ b/agriapps/eachview2.html
@@ -60,13 +60,13 @@
             <tbody>
               <tr class = "top-temprature">
                 <td style = "vertical-align: bottom;"><img src = "./img/green_single.png"/></td>
-                <td><span style = "font-size: 32px;">温度</span><br/><span style = "font-size: 64px;">23.5°</span></td>
+                <td><h3>温度(℃)</h3><h1 id = "now-temp"></h1></td>
                 <td style = "vertical-align: bottom;"><img src = "./img/green_single.png"/></td>
               </tr>
               <tr>
-                <td class = "max-temprature">最高<br/><span style = "font-size: 50px;">24.4°</span></td>
-                <td class = "min-temprature">最低<br/><span style = "font-size: 50px;">16.1° </span></td>
-                <td class = "average-temprature">平均<br/><span style = "font-size: 50px;"> 20.3°</span></td>
+                <td class = "max-temprature"><h3>最高(℃)</h3><h1 style = "margin-bottom: 20px;">24.4</h1></td>
+                <td class = "min-temprature"><h3>最低(℃)</h3><h1 style = "margin-bottom: 20px;">16.1</h1></td>
+                <td class = "average-temprature"><h3>平均(℃)</h3><h1 style = "margin-bottom: 20px;">20.1</h1></td>
               </tr>
             </tbody>
           </table>
