--- a/agriapps/listview.html
+++ b/agriapps/listview.html
@@ -6,7 +6,6 @@
     <meta name       = "viewport"         content = "width=device-width, initial-scale=1">
     <title>一覧ビュー</title>
     <link rel = "stylesheet" type = "text/css" href = "./css/bootstrap.min.css"                 media = "screen" />
-    <link rel = "stylesheet" type = "text/css" href = "./js/amcharts/plugins/export/export.css" media = "screen" />
     <link rel = "stylesheet" type = "text/css" href = "./css/style.css"                         media = "screen" />
     <link rel = "stylesheet" type = "text/css" href = "./css/style_list.css"                    media = "screen" />
     <!--[if lt IE 9]>
@@ -113,6 +112,9 @@
                 <td rowspan = 2 class = "align-vertical-center white-literal-black">発生</td>
               </tr>
               <tr>
+　login.html
+　listview.html
+　eachview.html
                 <td class = "white-literal-black">温度センサー2異常</td>
               </tr>
             </tbody>
@@ -129,24 +131,11 @@
    
     <!-- jquery -->
     <script src = "./js/jquery-1.11.1.min.js"></script>
-    <script src = "./js/jquery-ui.min.js"></script>
-    <script src = "./js/jquery.ui.touch-punch.min.js"></script>
-    <script>
-      $(function() {
-        $( "#sortable" ).sortable();
-        $( "#sortable" ).disableSelection();
-      });
-    </script>
+
 
     <!-- bootstrap -->
     <script src = "./js/bootstrap.min.js"></script>
 
-    <!-- amcharts -->
-    <script src = "./js/amcharts/amcharts.js"></script>
-    <script src = "./js/amcharts/serial.js"></script>
-    <script src = "./js/amcharts/plugins/export/export.min.js"></script>
-    <script src = "./js/amcharts/themes/light.js"></script>
-    <script src = "./js/chartcode.js"></script>
 
   </body>
 </html>
